--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
+    <header>
+        <a href="index.html" class="logo">JT</a>
+        <nav class="nav-bar">
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/blog-main.html">Blog</a>
+                </li>    
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/contact.html">Contact</a>
+                </li>    
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>    
+        </nav>
+    </header>
+    <main>
+        <p class="hero">Hey, I'm Julian Timbs</p>
+        <p class="info">I'm an aspiring web developer with experience in HTML & CSS and plans on developing skills in Javascript and Python</p>
+        <button class="about-btn">About Me</button>
+    </main>
+    <footer>
+        <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
+        <a href="https://github.com/JulianTimbs" class="fa fa-github"></a>
+        <a href="timbsjulian@gmail.com" class="email">timbsjulian@gmail.com</a>
+    </footer>
     
+    <script src="./main.js" type="text/javascript"></script>
 </body>
 </html>
