--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Portfolio - Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
-    
 </head>
 <body>
     <header>
@@ -36,11 +35,13 @@
         <button class="about-btn">About Me</button>
     </main>
     <footer>
-        <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
-        <a href="https://github.com/JulianTimbs" class="fa fa-github"></a>
-        <a href="timbsjulian@gmail.com" class="email">timbsjulian@gmail.com</a>
+        <div class="icons">
+            <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
+            <a href="https://github.com/JulianTimbs" class="fa fa-github"></a>
+        </div>    
+        <a href="./pages/contact.html" class="email">timbsjulian@gmail.com</a>
     </footer>
-    
+
     <script src="./main.js" type="text/javascript"></script>
 </body>
 </html>
