finished about page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio - Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="./images/JT.png">
 </head>
 <body>
     <header>
@@ -30,9 +31,11 @@
         </nav>
     </header>
     <main>
-        <p class="hero">Hey, I'm Julian Timbs</p>
+        <h1 class="hero">Hey, I'm Julian Timbs</h1>
         <p class="info">I'm an aspiring web developer with experience in HTML & CSS and plans on developing skills in Javascript and Python</p>
-        <button class="about-btn">About Me</button>
+        <button class="about-btn">
+            <a href="./pages/about.html" class="about-btn-text">About Me</a> 
+        </button>
     </main>
     <footer>
         <div class="icons">
