--- a/pages/about.html
+++ b/pages/about.html
@@ -14,13 +14,13 @@
         <nav class="nav-bar">
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/about.html">About</a>
+                    <a class="nav-link" href="../pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/blog-main.html">Blog</a>
+                    <a class="nav-link" href="../pages/blog-main.html">Blog</a>
                 </li>    
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/contact.html">Contact</a>
+                    <a class="nav-link" href="../pages/contact.html">Contact</a>
                 </li>    
             </ul>
             <div class="hamburger">
