finished blog page

--- a/pages/blog-main.html
+++ b/pages/blog-main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../styles/pages/about.css">
+    <link rel="stylesheet" href="../styles/pages/blog-main.css">
     <link rel="icon" type="image/x-icon" href="../images/JT.png">
 </head>
 <body>
@@ -31,7 +31,60 @@
         </nav>
     </header>
     <main>
-      
+      <div class="container">
+        <a href="./blog-pages/blog-1.html">
+            <div class="blog-post">
+                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 1</p>
+                <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+            </div>
+        </a>    
+      </div>
+      <div class="container">
+        <a href="./blog-pages/blog-2.html">
+            <div class="blog-post">
+                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 1</p>
+                <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+            </div>
+        </a>    
+      </div>
+      <div class="container">
+        <a href="./blog-pages/blog-3.html">
+            <div class="blog-post">
+                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 1</p>
+                <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+            </div>
+        </a>    
+      </div>
+      <div class="container">
+        <a href="./blog-pages/blog-4.html">
+            <div class="blog-post">
+                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 1</p>
+                <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+            </div>
+        </a>    
+      </div>
+      <div class="container">
+        <a href="./blog-pages/blog-5.html">
+            <div class="blog-post">         
+                    <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                    <p class="blog-title">Blog Title 1</p>
+                    <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>            
+            </div>
+        </a> 
+      </div>
+      <div class="container">
+        <a href="./blog-pages/blog-6.html">
+            <div class="blog-post">
+                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 1</p>
+                <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+            </div>
+        </a>    
+      </div>
     </main>
     <footer>
         <div class="icons">
