added blog posts and new photos

--- a/pages/blog-main.html
+++ b/pages/blog-main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - About</title>
+    <title>Portfolio - Blog Main</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../styles/pages/blog-main.css">
     <link rel="icon" type="image/x-icon" href="../images/JT.png">
@@ -34,7 +34,7 @@
       <div class="container">
         <a href="./blog-pages/blog-1.html">
             <div class="blog-post">
-                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
+                <img src="../images/umbrellas-blog1.jpg" alt="umbrellas in the sky">
                 <p class="blog-title">Blog Title 1</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
             </div>
@@ -43,8 +43,8 @@
       <div class="container">
         <a href="./blog-pages/blog-2.html">
             <div class="blog-post">
-                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
-                <p class="blog-title">Blog Title 1</p>
+                <img src="../images/cityscape-blog2.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 2</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
             </div>
         </a>    
@@ -52,8 +52,8 @@
       <div class="container">
         <a href="./blog-pages/blog-3.html">
             <div class="blog-post">
-                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
-                <p class="blog-title">Blog Title 1</p>
+                <img src="../images/mountainhouse-blog3.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 3</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
             </div>
         </a>    
@@ -61,8 +61,8 @@
       <div class="container">
         <a href="./blog-pages/blog-4.html">
             <div class="blog-post">
-                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
-                <p class="blog-title">Blog Title 1</p>
+                <img src="../images/iceland-blog4.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 4</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
             </div>
         </a>    
@@ -70,8 +70,8 @@
       <div class="container">
         <a href="./blog-pages/blog-5.html">
             <div class="blog-post">         
-                    <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
-                    <p class="blog-title">Blog Title 1</p>
+                    <img src="../images/painting-blog5.jpg" alt="umbrellas in the sky">
+                    <p class="blog-title">Blog Title 5</p>
                     <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>            
             </div>
         </a> 
@@ -79,8 +79,8 @@
       <div class="container">
         <a href="./blog-pages/blog-6.html">
             <div class="blog-post">
-                <img src="../images/umbrellas.jpg" alt="umbrellas in the sky">
-                <p class="blog-title">Blog Title 1</p>
+                <img src="../images/river-blog6.jpg" alt="umbrellas in the sky">
+                <p class="blog-title">Blog Title 6</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
             </div>
         </a>    
