added publish date to blog posts

--- a/pages/blog-pages/blog-5.html
+++ b/pages/blog-pages/blog-5.html
@@ -34,6 +34,7 @@
         <img src="../../images/painting-blog5.jpg" alt="Umbrellas" class="blog-image">
         <h1 class="blog-title">Blog Title 5</h1>
         <p class="blog-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, quia itaque veniam magni suscipit deserunt doloremque odio aut debitis laborum, dignissimos tempora accusantium, quod sequi error vel rerum delectus earum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime architecto quia ea esse blanditiis accusamus! Autem, impedit quam earum tempore illo eveniet at maiores necessitatibus praesentium cum dolorem soluta?</p>
+        <p class="publish-date">Published: 06/11/2023</p>
     </main>
     <footer>
         <div class="icons">
