--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../images/JT.png">
 </head>
 <body>
+    <!-- see index.html for comments on header -->
     <header>
         <a href="../index.html" class="logo">JT</a>
         <nav class="nav-bar">
@@ -31,14 +32,18 @@
         </nav>
     </header>
     <main>
+        <!-- desired look for content is to be stacked so no container classes are used -->
        <h1 class="heading">About Me</h1>
+       <!-- p tags used for informative content separated by paragraph, instead of using <br> tag for readability -->
        <p class="p1">I enjoy hanging out with mates, so I appreciate working with a team and enjoy having a laugh.</p>
        <p class="p2">Web development and learning more about software engineering has become an enjoyable pass-time as well</p>
        <p class="p3">In terms of work experience, I've worked in various sales roles and recruitment too. See more about my work experience by clicking the button below</p>
+       <!-- button for button to resume which links to a public Google Doc which contains resume -->
        <button class="resume-btn">
         <a href="https://drive.google.com/file/d/1vV-aSNl-wndGLrXdU-R2ANiYeathw7mt/view?usp=sharing" class="resume-txt">Resume</a>
        </button>
     </main>
+    <!-- see index.html for comments on footer -->
     <footer>
         <div class="icons">
             <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
