--- a/pages/blog-main.html
+++ b/pages/blog-main.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../images/JT.png">
 </head>
 <body>
+    <!-- see index.html for comments on header -->
     <header>
         <a href="../index.html" class="logo">JT</a>
         <nav class="nav-bar">
@@ -31,61 +32,61 @@
         </nav>
     </header>
     <main>
-      <div class="container">
+        <!-- blog posts have been placed in container div for styling as CSS Grid and flexbox is used -->
+        <!-- blog cards are wrapped in link tag to relevant blog page so the whole card is clickable and not just the title -->
+        <!-- Each blog card consists of a blog title, image and brief blog description as well as publish date -->
+      <div class="container container-1">
         <a href="./blog-pages/blog-1.html">
-            <div class="blog-post">
+            <div class="blog-post blog-1">
                 <img src="../images/umbrellas-blog1.jpg" alt="umbrellas in the sky">
                 <p class="blog-title">Blog Title 1</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+                <p class="publish-date">Published: 14/11/2023</p>
             </div>
         </a>    
       </div>
-      <div class="container">
+      <div class="container container-2">
         <a href="./blog-pages/blog-2.html">
-            <div class="blog-post">
+            <div class="blog-post blog-2">
                 <img src="../images/cityscape-blog2.jpg" alt="umbrellas in the sky">
                 <p class="blog-title">Blog Title 2</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+                <p class="publish-date">Published: 08/11/2023</p>
             </div>
         </a>    
       </div>
-      <div class="container">
+      <div class="container container-3">
         <a href="./blog-pages/blog-3.html">
-            <div class="blog-post">
+            <div class="blog-post blog-3">
                 <img src="../images/mountainhouse-blog3.jpg" alt="umbrellas in the sky">
                 <p class="blog-title">Blog Title 3</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+                <p class="publish-date">Published: 01/11/2023</p>
             </div>
         </a>    
       </div>
-      <div class="container">
+      <div class="container container-4">
         <a href="./blog-pages/blog-4.html">
-            <div class="blog-post">
+            <div class="blog-post blog-4">
                 <img src="../images/iceland-blog4.jpg" alt="umbrellas in the sky">
                 <p class="blog-title">Blog Title 4</p>
                 <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
+                <p class="publish-date">Published: 29/10/2023</p>
             </div>
         </a>    
       </div>
-      <div class="container">
+      <div class="container container-5">
         <a href="./blog-pages/blog-5.html">
-            <div class="blog-post">         
+            <div class="blog-post blog-5">         
                     <img src="../images/painting-blog5.jpg" alt="umbrellas in the sky">
                     <p class="blog-title">Blog Title 5</p>
                     <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>            
+                    <p class="publish-date">Published: 21/10/2023</p>
             </div>
         </a> 
       </div>
-      <div class="container">
-        <a href="./blog-pages/blog-6.html">
-            <div class="blog-post">
-                <img src="../images/river-blog6.jpg" alt="umbrellas in the sky">
-                <p class="blog-title">Blog Title 6</p>
-                <p class="blog-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga iusto unde</p>
-            </div>
-        </a>    
-      </div>
     </main>
+    <!-- see index.html for comments on footer -->
     <footer>
         <div class="icons">
             <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
