--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../images/JT.png">
 </head>
 <body>
+    <!-- see index.html for comments on header -->
     <header>
         <a href="../index.html" class="logo">JT</a>
         <nav class="nav-bar">
@@ -31,9 +32,13 @@
         </nav>
     </header>
     <main>
+        <!-- heading for content on page -->
        <h1 class="heading">Get In Touch!</h1>
+       <!-- info for page -->
        <p class="info">If you want to get in touch feel free to fill out the form below and I'll get back to you ASAP</p>
+       <!-- container for contact card -->
        <div class="container">
+        <!-- form for contact input including section for inputting name, email and a message as well as a submit button -->
             <form class="contact-card">
                 <label class="fullname" for="name">Name:</label>
                 <input type="text" id="name-input" name="full-name">
@@ -45,6 +50,7 @@
             </form>    
        </div>
     </main>
+    <!-- see index.html for comments on footer -->
     <footer>
         <div class="icons">
             <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
