--- a/pages/blog-pages/blog-1.html
+++ b/pages/blog-pages/blog-1.html
@@ -1,3 +1,4 @@
+<!-- this will contain comments for all individual blog posts as they all contain the same structure with only the image changing -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="../../images/JT.png">
 </head>
 <body>
+    <!-- see index.html for comments on header -->
     <header>
         <a href="../../index.html" class="logo">JT</a>
         <nav class="nav-bar">
@@ -31,11 +33,15 @@
         </nav>
     </header>
     <main>
+        <!-- no container div is used as content stacked on top of each other is desired -->
         <img src="../../images/umbrellas-blog1.jpg" alt="Umbrellas" class="blog-image">
+        <!-- h1 tag used for blog title -->
         <h1 class="blog-title">Blog Title 1</h1>
+        <!-- p tag used for blog content -->
         <p class="blog-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, quia itaque veniam magni suscipit deserunt doloremque odio aut debitis laborum, dignissimos tempora accusantium, quod sequi error vel rerum delectus earum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime architecto quia ea esse blanditiis accusamus! Autem, impedit quam earum tempore illo eveniet at maiores necessitatibus praesentium cum dolorem soluta?</p>
-        <p class="publish-date">Published: 04/11/2023</p>
+        <p class="publish-date">Published: 14/11/2023</p>
     </main>
+    <!-- see index.html for comments on footer -->
     <footer>
         <div class="icons">
             <a href="https://www.linkedin.com/in/julian-timbs-7b37951b1/" class="fa fa-linkedin"></a>
